css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap');

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	text-decoration: none;
}

body{
	background-color: #ffffff;
	margin:  0;
	padding: 0;
	min-height: 100%;
	font-size: 100%;
}

header{
	background-color: white;
	margin:  5px;
	padding: 5px;
	text-align: center;
}

.top{
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: flex-end;
	gap: 25px;
	font-weight: bold;
	font-size: 20px;
	font-family: 'Roboto', sans-serif;
	margin-top: 20px;
	margin-bottom: 20px;
}

.intro-main{
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 70px;
	margin: 120px;
}

.contact{
	font-size: 20px;
}

.contact h2 {
	font-size: 40px;
	margin-bottom: 20px;
}

.open-resume{
	width: 208px;
	height: 47px;
	border-radius: 2px;
	background: var(--primary, #FF6464);
	text-align: center;
	font-size: 18px;
	font-weight: 700;
	color: #FFF;
	margin-top: 30px;
	float: left;
}

.recent-posts-main{
	background-color: #EDF7FA;
	padding: 20px;
	padding-left: 120px;
	padding-right: 120px;
}

.recent-posts-header{
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
}

.section_title{
	font-size: 20px;
	font-weight: 300;
}

.view-all{
	color: #00A8CC;
	text-align: right;
}

.view-all:hover{
	text-decoration-color: #00A8CC;
	text-decoration-line: underline;
}

.recent-posts{
	margin-top: 20px;
	display: flex;
	flex-direction: row;
	align-items: top;
	gap: 20px;
	justify-content: center;
}

.recent-post-item{
	background-color: white;
	padding: 15px;
}

.post-data{
	margin-top: 20px;
	margin-bottom: 20px;
}

.featured-works-main{
	background-color: white;
	padding: 20px;
	padding-left: 120px;
	padding-right: 120px;
}

.featured-work-item{
	margin-top: 20px;
	margin-bottom: 20px;
	display: flex;
	flex-direction: row-reverse;
	align-items: top;
	gap: 20px;
	justify-content: left;
}

.featured-work-item a img{
	max-height: 200px;
	width: auto;
	border-radius: 8px;
}

a img:hover{
	box-shadow: 0 0 3px 2px rgba(0, 140, 186, 0.5);
}

.container{
    min-height:100vh;
    position:relative;
}

footer{
	padding-bottom: 80px;
	min-height: 100%;
}

.footer-main{
	position: absolute;
	bottom: 0;
	width: 100%;
	height:  80px;
	background-color: white;
	font-family: 'Roboto', sans-serif;
	text-align: center;
}

.author{
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
	gap: 5px;
	font-size: 18px;
}

iframe{
	width:  100%;
	height:  600px;
}

table{
	text-align: center;
}

table, th, td{
	border:  1px solid blue;
}

td{
	width: 50px;
	height: 50px;
	background-color: antiquewhite;
}

section{
	font-family: 'Roboto', sans-serif;
}

h1{
	font-family: Courier New;
	color: #00b1ff;
}

h2{
	text-align: left;
}

img{
	width: 50%;
}

.page-name{
	padding-top: 10px;
	margin-bottom: 10px;
	font-size: 20px;
	font-style: normal;
	font-family: Courier New;
	color: #00b1ff !important;
	text-decoration-line: none !important;
}

.img-row{
	display:  flex;
}

.img-column{
	flex:  50%;
	padding: 5px;
}

.toggle-dark-mode{
	width: 20px;
	height: 20px;
	background-color: #eee8e1;

	display: grid;
	place-items: center;
	border-radius: 50%;
	cursor:  pointer;
}

.toggle-dark-mode i{
	font-size:  20px;
	color:  #202020;
}

.toggle-dark-mode.dark-mode i{
	color:  #777;
}

.dark-mode{
	background-color: #353535;
	color:  #eeeeee;
}

main.dark-mode{
	background-color: #262626;
}

header.dark-mode{
	background-color: #262626;
}

footer.dark-mode{
	background-color: #262626;
}

.toggle-dark-mode.dark-mode{
	background-color: #151515;
}

.top{
	text-align: right;
}

section p{
	text-align: justify;
}

a{
	color: black;
	font-family: 'Roboto', sans-serif;
	text-decoration-line: none;
}

a:hover{
	text-decoration-line: underline;
}

a.dark-mode{
	color: #d445e4;
}

td.dark-mode{
	background-color: #151515;
}

hr{
	border: 1px solid #E0E0E0;
}

